# sample-governed-finops-agent-bedrock-agentcore

./: .gitignore  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml
cdk/: cdk.context.example.json  cdk.json  eslint.config.js  package-lock.json  package.json  tsconfig.json
cdk/lib/: agent-runtime-stack.ts  approval-stack.ts  auth-stack.ts  gateway-stack.ts  image-stack.ts  mcp-runtime-stack.ts  remediator-gateway-stack.ts  remediator-runtime-stack.ts  risk-interceptor-stack.ts
codebuild-scripts/: buildspec-billing.yml  buildspec-pricing.yml  buildspec-remediator.yml  transform-billing.sh  transform-pricing.sh
docs/: ARCHITECTURE.md  cedar-policies.md  flow-diagram.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.tsx  config.ts  vite-env.d.ts
frontend/src/api/: agentcore.ts  remediator.ts
frontend/src/hooks/: useAgentCore.ts  useAuditHistory.ts  useAuth.ts  useRecommendations.ts  useRemediator.ts
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
lambda/approval/: approval_handler.py  approval_timeout.py
lambda/audit/: query_handler.py
lambda/build-trigger/: index.py
lambda/build-waiter/: index.py
lambda/policy-setup/: index.py
lambda/remediation/: add_tag.py  delete_ebs_volume.py  delete_snapshot.py  modify_storage.py  resize_instance.py  stop_instance.py  terminate_instance.py
lambda/risk_interceptor/: handler.py
scripts/: generate-notice.sh  scan-internal-refs.sh  seed_risk_mappings.py  setup-git-secrets.sh  validate-publication.sh
src/recommender/: Dockerfile  mcp_transport.py  models.py  prompt.py  requirements.txt  runtime.py
src/recommender/tools/: __init__.py  (+2 more)
src/remediator/: Dockerfile  policy_engine.py  prompt.py  requirements.txt  resource_context.py  runtime.py
tests/: conftest.py
tests/integration/: .gitkeep
tests/unit/: test_approval_handler.py  test_models.py  test_policy_engine.py  test_prioritization.py  test_remediation_lambdas.py  test_resource_context.py  test_risk_interceptor.py  test_system_prompt.py
(+19 files in other folders)
