[project]
name = "sample-finops-agent-amazon-bedrock-agentcore"
version = "1.0.0"
description = "FinOps agent built on Amazon Bedrock AgentCore for AWS cost optimization"
readme = "README.md"
license = "MIT-0"
requires-python = ">=3.13"
authors = [
    { name = "Amazon Web Services" },
]
keywords = ["aws", "bedrock", "agentcore", "finops", "cost-optimization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "strands-agents[otel]>=1.20.0",
    "bedrock-agentcore>=1.1.0",
    "boto3>=1.35.0",
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "aws-opentelemetry-distro>=0.10.0",
    "opentelemetry-instrumentation>=0.50b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "boto3-stubs[ec2,ce,pricing]>=1.35.0",
]
remediator = [
    "strands-agents[otel]>=1.20.0",
    "bedrock-agentcore>=1.1.0",
    "boto3>=1.35.0",
    "aws-opentelemetry-distro>=0.10.0",
    "opentelemetry-instrumentation>=0.50b0",
]
lambda = [
    "boto3>=1.34.0",
]

[project.urls]
Homepage = "https://github.com/aws-samples/sample-governed-finops-agent-bedrock-agentcore"
Repository = "https://github.com/aws-samples/sample-governed-finops-agent-bedrock-agentcore"
Issues = "https://github.com/aws-samples/sample-governed-finops-agent-bedrock-agentcore/issues"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agentcore*", "lambda*"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
